--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -32,7 +32,7 @@
     "import io\n",
     "from PIL import Image\n",
     "\n",
-    "image = Image.open('./images/img-2.jpg')\n",
+    "image = Image.open('./images/img-2.png')\n",
     "image.show()\n",
     "image_bytes = io.BytesIO()\n",
     "image.save(image_bytes, format='JPEG')\n",
